# Kokoro-MCP-Server

./: .dockerignore  .env.example  .gitignore  .uvconfig.yaml  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  __main__.py  build-multi-arch.sh  claude_desktop_config.json  claude_desktop_config.json.example  deploy.sh  docker-compose.yml  docker-entrypoint.sh  mecab_windows_setup.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md
examples/: tts_example.py
src/: __init__.py  config.py  main.py
src/VoiceStudio-MCP-server/: server.py.py
src/VoiceStudio-MCP-server/kokoro/: __init__.py
src/kokoro/: __init__.py  mock.py
src/kokoro-MCP-server/: server.py
src/kokoro-MCP-server/kokoro/: base.py  kokoro.py
src/kokoro_mcp_server/: __init__.py  __main__.py  config.json  server.py  tts.py
src/kokoro_mcp_server/kokoro/: base.py  kokoro.py  mock.py
src/server/: mcp.py  websocket.py
src/server/models/: context.py  messages.py
src/utils/: logging.py
tests/: conftest.py  test_mock_engine.py  test_tts.py
tests/integration/: test_mcp_integration.py
tests/load/: test_mcp_load.py
tests/unit/server/: test_mcp.py
tests/unit/server/models/: test_context.py  test_messages.py
